--- a/Randomizer-MacOS/Randomizer-MacOS/Base.lproj/Main.storyboard
+++ b/Randomizer-MacOS/Randomizer-MacOS/Base.lproj/Main.storyboard
@@ -640,8 +640,8 @@
                                                 <action selector="performMiniaturize:" target="Ady-hI-5gd" id="VwT-WD-YPe"/>
                                             </connections>
                                         </menuItem>
-                                        <menuItem title="Zoom" keyEquivalent="" id="R4o-n2-Eq4">
-                                            <modifierMask key="keyEquivalentModifierMask" shift="YES" option="YES"/>
+                                        <menuItem title="Zoom" keyEquivalent="8" id="R4o-n2-Eq4">
+                                            <modifierMask key="keyEquivalentModifierMask" shift="YES" control="YES"/>
                                             <connections>
                                                 <action selector="performZoom:" target="Ady-hI-5gd" id="DIl-cC-cCs"/>
                                             </connections>
